[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/airstrip-four/airstrip_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/airstrip-four/airstrip_28.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/airstrip-four/airstrip_92.tres" type="DynamicFont" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
np_start_game_button = NodePath("PanelContainer/MarginContainer2/StartButton")
np_ui_audio_master = NodePath("PanelContainer/CenterContainer/VBoxContainer/MusicConrol/MasterVolumeSlider")
np_ui_audio_music = NodePath("PanelContainer/CenterContainer/VBoxContainer/MusicConrol/MusicVolumeSlider")
np_ui_audio_soundfx = NodePath("PanelContainer/CenterContainer/VBoxContainer/MusicConrol/SoundFxVolumeSlider")
np_webgl_button = NodePath("PanelContainer/WebGLButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1886.0
margin_bottom = 124.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.380392, 0.380392, 0.380392, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 4 )
text = "Groceries Please!"
align = 1
valign = 1

[node name="WebGLButton" type="Button" parent="PanelContainer"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
text = "click here to switch to fullscreen"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
custom_constants/margin_top = 600
custom_constants/margin_left = 1200

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer2"]
margin_left = 1200.0
margin_top = 600.0
margin_right = 1328.0
margin_bottom = 728.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer2/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer2/StartButton/MarginContainer"]
margin_top = 31.0
margin_right = 128.0
margin_bottom = 97.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Start
Work[/center]"
text = "Start
Work"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 759.0
margin_top = 493.0
margin_right = 1147.0
margin_bottom = 573.0

[node name="MusicConrol" type="GridContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 388.0
margin_bottom = 80.0
columns = 2

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/MusicConrol"]
margin_right = 184.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "master volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/CenterContainer/VBoxContainer/MusicConrol"]
margin_left = 188.0
margin_right = 388.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )

[node name="Label2" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/MusicConrol"]
margin_top = 28.0
margin_right = 184.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "music volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/CenterContainer/VBoxContainer/MusicConrol"]
margin_left = 188.0
margin_top = 28.0
margin_right = 388.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 0 )

[node name="Label3" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/MusicConrol"]
margin_top = 56.0
margin_right = 184.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "sound fx volume:"

[node name="SoundFxVolumeSlider" type="HSlider" parent="PanelContainer/CenterContainer/VBoxContainer/MusicConrol"]
margin_left = 188.0
margin_top = 56.0
margin_right = 388.0
margin_bottom = 72.0
rect_min_size = Vector2( 200, 0 )

[connection signal="pressed" from="PanelContainer/WebGLButton" to="." method="_on_WebGLButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer2/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/VBoxContainer/MusicConrol/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/VBoxContainer/MusicConrol/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/VBoxContainer/MusicConrol/SoundFxVolumeSlider" to="." method="_on_SoundFxVolumeSlider_value_changed"]
